--- a/blz002.html
+++ b/blz002.html
@@ -383,8 +383,8 @@
          
            <div class="footer">
             <div class="row">
-            <div class="col-12 col-sm-12 col-md-4 pb-20 border-bot">
-              <h5 class="bold mb-20">Công ty TNHH đầu tư và phát triển Mando</h5>
+            <div class="col-12 col-sm-12 col-md-4 pb-20 border-bot pt-20">
+              <h5 class="bold mb-20 ">Công ty TNHH đầu tư và phát triển Mando</h5>
 
               <p class="pb-10">Thời trang MANDO Mã số doanh nghiệp: 0108403540 do sở Kế hoạch và Đầu tư TP Hà Nội cấp ngày 14/08/2018</p>
 
