--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
         </div>
       </div>
 
-      <div class="container flex j-center">
+      <div class="container flex j-center ">
         <p class="collection">BST Thu Đông MANDO</p>
       </div>
 
-      <div class="collection-list">
-        <div class="container">
-          <div class="row">
-            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+      <div class="collection-list  ">
+        <div class="container ">
+          <div class="row item-show-top">
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3 show-to-top delay-02">
+              <div class="box-product  ">
                 <a href="blz002.html">
                   <img src="asset/images/bst1.webp" class="item" alt="" />
                 </a>
@@ -151,7 +151,7 @@
                 <p>449,000đ</p>
               </div>
             </div>
-            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3 show-to-top delay-04">
               <div class="box-product">
                 <a href="hod001.html"><img src="asset/images/bst2.webp" class="item" alt="" /></a>
                 <a
@@ -164,7 +164,7 @@
                 <p>499,000đ</p>
               </div>
             </div>
-            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3 show-to-top delay-06">
               <div class="box-product">
                 <a href="hod002.html">
                   <img src="asset/images/bst3.webp" class="item" alt="" />
@@ -179,7 +179,7 @@
                 <p>499,000đ</p>
               </div>
             </div>
-            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3 show-to-top delay-08">
               <div class="box-product">
                 <a href="bob001.html"><img src="asset/images/bst4.webp" class="item" alt="" /></a>
                 <a
@@ -193,8 +193,8 @@
               </div>
             </div>
 
-            <div class="col-12 col-sm-4 col-md-4 m-0 p-0">
-              <div class="collection-box">
+            <div class="col-12 col-sm-4 col-md-4 m-0 p-0 item-show-top-2">
+              <div class="collection-box show-to-center">
                 <a href="">
                   <img src="asset/images/bst7.webp" alt="" />
                 </a>
@@ -213,8 +213,8 @@
                 <a href="" class="view-more">XEM THÊM</a>
               </div>
             </div>
-            <div class="col-12 col-sm-4 col-md-4 m-0 p-0">
-              <div class="collection-box">
+            <div class="col-12 col-sm-4 col-md-4 m-0 p-0 item-show-top-2">
+              <div class="collection-box show-to-center-2">
                 <a href="">
                   <img src="asset/images/bst6.webp" alt="" />
                 </a>
@@ -231,9 +231,10 @@
         <p class="collection">SẢN PHẨM BÁN CHẠY</p>
       </div>
 
-      <div class="container">
-        <div class="row">
-          <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+      <div class="container item-show-top">
+        <div class="row ">
+          <div class="show-soon row show-to-top delay-04">
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
               <img src="asset/images/sale1.webp" class="item" alt="" />
               <a href="" title="ÁO NỈ DÀI TAY CỔ BẺ 3 MÀU MANDO SWT022"
@@ -281,7 +282,9 @@
               <p>349,000đ</p>
             </div>
           </div>
-          <div class="col-6 col-sm-6 col-md-3 col-lg-3">
+          </div>
+          <div class="show-late row show-to-top delay-08">
+            <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
               <img src="asset/images/sale6.webp" class="item" alt="" />
               <a href="" title="ÁO SHIRT CỔ VEST MANDO SHT004"
@@ -328,6 +331,7 @@
               </a>
               <p>499,000đ</p>
             </div>
+          </div>
           </div>
         </div>
       </div>
@@ -399,7 +403,7 @@
          
            <div class="footer">
             <div class="row">
-            <div class="col-12 col-sm-12 col-md-4 pb-20 border-bot">
+            <div class="col-12 col-sm-12 col-md-4 pb-20 border-bot pt-20">
               <h5 class="bold mb-20">Công ty TNHH đầu tư và phát triển Mando</h5>
 
               <p class="pb-10">Thời trang MANDO Mã số doanh nghiệp: 0108403540 do sở Kế hoạch và Đầu tư TP Hà Nội cấp ngày 14/08/2018</p>
