--- a/products-list.html
+++ b/products-list.html
@@ -30,13 +30,15 @@
     <link rel="stylesheet" href="asset/css/products-list.css">
   </head>
   <body>
-    <header>
+     <header>
       <div class="container">
         <div class="header-top">
           <div class="flex">
             <div class="col-4 col-sm-4 col-md-4 flex a-center">
               <div class="user">
-                <i class="fa-solid fa-user mando"></i>
+                <a href="login.html">
+                  <i class="fa-solid fa-user mando"></i>
+                </a>
               </div>
             </div>
 
@@ -58,7 +60,9 @@
                 </div>
 
                 <div class="cart-box">
-                  <i class="fa-sharp fa-solid fa-bag-shopping mando"></i>
+                  <a href="cart.html">
+                    <i class="fa-sharp fa-solid fa-bag-shopping mando"></i>
+                  </a>
                 </div>
               </div>
             </div>
@@ -73,8 +77,19 @@
           </div>
         </div>
 
+        <div class="col-12">
+          <div class="container">
+            <div class="row">
+              <div class="search-input-box rela">
+                <input class="search-input" type="text" placeholder="Tìm kiếm...">
+                <label for="" class="abso search-icon-inside"><i class="fa-solid fa-magnifying-glass mando"></i></label>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="container flex j-center a-center">
-          <nav class= "col-12 col-sm-12 col-md-12 ">
+           <nav class= "col-12 col-sm-12 col-md-12 ">
             <ul class="menu ">
               <li class="link  "><a href="./index.html">Trang chủ</a></li>
               <li class="link around link-product">
