--- a/cart.html
+++ b/cart.html
@@ -293,12 +293,22 @@
                     <div class="col-sm-1 col-md-1"></div>
                 </div>
 
+                <div class="container pt-20">
+                  <div class="col-12  flex j-end">
+                    <div class=" col-6 flex j-end">
+                                          TỔNG : <span class="total bold ml-10"><h5 class="bold"> 898,000đ</h5></span>
+
+                    </div>
+                  </div>
+                </div>
+
                 <div class="container mt-30">
                     <div class="row">
                         <div class="col-sm-6 col-md-6" ></div>
 
                 <div class="col-12 col-sm-12 col-md-6">
                     <div class="row">
+
                         <div class="col-6 col-sm-6 col-md-6 flex j-center a-center ">
                         <div class="back-to-home flex j-center a-center">
                             <a href="index.html"><div>
