--- a/address.html
+++ b/address.html
@@ -240,7 +240,7 @@
                         <div class="col-3">
                             <div class="address-input col-12">
 
-                                <input class="full-name" type="text" placeholder="Số điện thoại" id="#phonenumber">
+                                <input class="full-name"  type="text" placeholder="Số điện thoại" id="#phonenumber">
                             </div>
 
                         </div>
@@ -253,8 +253,8 @@
                         </div>
 
                         <div class="col-5"></div>
-                        <div class="col-5">
-                           <div class="deal flex j-center a-center">
+                        <div class="col-5 thank-you" >
+                           <div class="deal cursor flex j-center a-center">
                              ĐẶT HÀNG
                            </div>
                         </div>
@@ -278,10 +278,10 @@
     <footer>
 
       
-        <div class="container ">
-          <div class="row news">
+        <div class="container active p-0 ">
+          <div class="row news show-to-top ">
             
-            <div class="col-12 col-sm-12 col-md-3 flex j-center a-center">
+            <div class="col-12 col-sm-12 col-md-3 flex j-center a-center p-0">
 
             <div class="mail-icon new-content flex j-center a-center">
               <i class="fa-regular fa-envelope mr-10"></i>
@@ -290,7 +290,7 @@
             </div>
 
           </div>
-          <div class="col-12 col-sm-12 col-md-6 flex j-center a-center">
+          <div class="col-12 col-sm-12 col-md-6 flex j-center a-center p-0">
 
             <div class="new-content mail-to flex ">
               <input class="mail-input" type="text" placeholder="Nhập email của bạn">
@@ -305,10 +305,10 @@
           </div>
 
 
-          <div class="col-12 col-sm-12 col-md-3 flex j-center a-center">
+          <div class="col-12 col-sm-12 col-md-3 flex j-center a-center p-0">
            <div class="new-content call flex j-center a-center">
-             <i class="fa-solid fa-phone mr-10"></i>
-            <span class="mr-10">Hỗ trợ / Mua hàng :</span> <span style=" color: red" class="mr-10"">0929606620</span>
+             <i class="fa-solid fa-phone"></i>
+            <span class="pl-10">Hỗ trợ / Mua hàng :</span> <span style=" color: red" class="pl-10"">0929606620</span>
            </div>
 
 
@@ -364,7 +364,7 @@
             <div class="col-12 col-sm-12 col-md-3 pt-20 border-bot pb-20">
               <h5 class="bold mb-20">Fanpage</h5>
 
-              <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=290&height=100&small_header=false&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" max-width="300" height="100" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+              <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Ffacebook&tabs=timeline&width=290&height=100&small_header=false&adapt_container_width=false&hide_cover=false&show_facepile=false&appId" max-width="100%" height="100" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </div>
           </div>
          </div>
@@ -394,5 +394,7 @@
     <script src="asset/js/custom-owl.js"></script>
 
     <script src="asset/js/index.js"></script>
+
+    <script src="asset/js/address.js"></script>
   </body>
 </html>
