--- a/index.html
+++ b/index.html
@@ -248,11 +248,13 @@
 
       <div class="container item-show-top">
         <div class="row ">
-          <div class="show-soon row show-to-top delay-04">
+          <div class="show-soon row show-to-top delay-02">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
-              <img src="asset/images/sale1.webp" class="item" alt="" />
-              <a href="" title="ÁO NỈ DÀI TAY CỔ BẺ 3 MÀU MANDO SWT022"
+              <a href="swt002.html">
+                <img src="asset/images/sale1.webp" class="item" alt="" />
+              </a>
+              <a href="swt002.html" title="ÁO NỈ DÀI TAY CỔ BẺ 3 MÀU MANDO SWT022"
                 >ÁO NỈ DÀI TAY CỔ BẺ 3 MÀU MANDO ...</a
               >
               <p>299,000đ</p>
@@ -260,9 +262,11 @@
           </div>
           <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
-              <img src="asset/images/sale2.webp" class="item" alt="" />
+              <a href="sht003.html">
+                <img src="asset/images/sale2.webp" class="item" alt="" />
+              </a>
               <a
-                href=""
+                href="sht003.html"
                 title="					ÁO SHIRT CỔ SƠ MI TRƠN SHT003
 "
               >
@@ -273,9 +277,11 @@
           </div>
           <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
-              <img src="asset/images/sale3.webp" class="item" alt="" />
+              <a href="sht011.html">
+                <img src="asset/images/sale3.webp" class="item" alt="" />
+              </a>
               <a
-                href=""
+                href="sht011.html"
                 title="					ÁO SHIRT CARO SHT011
 "
               >
@@ -286,9 +292,9 @@
           </div>
           <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
-              <img src="asset/images/sale4.webp" class="item" alt="" />
+             <a href="sht008.html"> <img src="asset/images/sale4.webp" class="item" alt="" /></a>
               <a
-                href=""
+                href="sht008.html"
                 title="					ÁO SHIRT NHUNG TĂM SHT008
 "
               >
@@ -301,7 +307,9 @@
           <div class="show-late row show-to-top delay-08">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
-              <img src="asset/images/sale6.webp" class="item" alt="" />
+              <a href="sht004.html">
+                <img src="asset/images/sale6.webp" class="item" alt="" />
+              </a>
               <a href="" title="ÁO SHIRT CỔ VEST MANDO SHT004"
                 >ÁO SHIRT CỔ VEST MANDO SH ...</a
               >
@@ -310,9 +318,11 @@
           </div>
           <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
-              <img src="asset/images/sale7.webp" class="item" alt="" />
+              <a href="sht005.html">
+                <img src="asset/images/sale7.webp" class="item" alt="" />
+              </a>
               <a
-                href=""
+                href="sht005.html"
                 title="					ÁO SHIRT KẺ CARO 2 MÀU SHT005
 "
               >
@@ -323,9 +333,11 @@
           </div>
           <div class="col-6 col-sm-6 col-md-3 col-lg-3">
             <div class="box-product">
-              <img src="asset/images/sale5.webp" class="item" alt="" />
+              <a href="swt001.html">
+                <img src="asset/images/sale5.webp" class="item" alt="" />
+              </a>
               <a
-                href=""
+                href="swt001.html"
                 title="					ÁO SWEATER FRIEND YOUTH SWT001
 "
               >
@@ -379,10 +391,10 @@
     <footer>
 
       
-        <div class="container item-show-top ">
-          <div class="row news show-to-top">
+        <div class="container item-show-top p-0 ">
+          <div class="row news show-to-top ">
             
-            <div class="col-12 col-sm-12 col-md-3 flex j-center a-center">
+            <div class="col-12 col-sm-12 col-md-3 flex j-center a-center p-0">
 
             <div class="mail-icon new-content flex j-center a-center">
               <i class="fa-regular fa-envelope mr-10"></i>
@@ -391,7 +403,7 @@
             </div>
 
           </div>
-          <div class="col-12 col-sm-12 col-md-6 flex j-center a-center">
+          <div class="col-12 col-sm-12 col-md-6 flex j-center a-center p-0">
 
             <div class="new-content mail-to flex ">
               <input class="mail-input" type="text" placeholder="Nhập email của bạn">
@@ -406,7 +418,7 @@
           </div>
 
 
-          <div class="col-12 col-sm-12 col-md-3 flex j-center a-center">
+          <div class="col-12 col-sm-12 col-md-3 flex j-center a-center p-0">
            <div class="new-content call flex j-center a-center">
              <i class="fa-solid fa-phone"></i>
             <span class="pl-10">Hỗ trợ / Mua hàng :</span> <span style=" color: red" class="pl-10"">0929606620</span>
