--- a/products-list-2.html
+++ b/products-list-2.html
@@ -200,7 +200,7 @@
                         <div class="container">
           <div class="row">
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q1.webp" class="item" alt="" />
                 <a href="" title="QUẦN ÂU NAM ỐNG XUÔNG CẠP SAU CHUN MANDO - QKN053"
                   >QUẦN ÂU NAM ỐNG XUÔNG ...</a
@@ -209,7 +209,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q2.webp" class="item" alt="" />
                 <a
                   href=""
@@ -222,7 +222,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q3.webp" class="item" alt="" />
                 <a
                   href=""
@@ -235,7 +235,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q4.webp" class="item" alt="" />
                 <a
                   href=""
@@ -248,7 +248,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q5.webp" class="item" alt="" />
                 <a
                   href=""
@@ -261,7 +261,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q6.webp" class="item" alt="" />
                 <a
                   href=""
@@ -274,7 +274,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q7.webp" class="item" alt="" />
                 <a
                   href=""
@@ -287,7 +287,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q8.webp" class="item" alt="" />
                 <a
                   href=""
@@ -300,7 +300,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q9.webp" class="item" alt="" />
                 <a
                   href=""
@@ -313,7 +313,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q10.webp" class="item" alt="" />
                 <a
                   href=""
@@ -326,7 +326,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q11.webp" class="item" alt="" />
                 <a
                   href=""
@@ -339,7 +339,7 @@
               </div>
             </div>
             <div class="col-6 col-sm-6 col-md-3 col-lg-3">
-              <div class="box-product">
+              <div class="box-product link-to-2">
                 <img src="asset/images/q12.webp" class="item" alt="" />
                 <a
                   href=""
@@ -482,5 +482,7 @@
     <script src="asset/js/custom-owl.js"></script>
 
     <script src="asset/js/index.js"></script>
+
+    <script src="asset/js/address.js"></script>
   </body>
 </html>
