--- a/login.html
+++ b/login.html
@@ -17,7 +17,9 @@
   <body>
     <div class="wapper">
       <div class="wapper-heading mb-20">
-        <img src="asset/images/logo.webp" style="max-width: 120px" alt="" />
+        <a href="index.html">
+          <img src="asset/images/logo.webp" style="max-width: 120px" alt="" />
+        </a>
 
         <h2>Đăng Nhập</h2>
       </div>
