--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="container flex j-center a-center">
            <nav class= "col-12 col-sm-12 col-md-12 ">
             <ul class="menu ">
-              <li class="link  "><a href="./index.html">Trang chủ</a></li>
+              <li class="link border-bot "><a href="./index.html">Trang chủ</a></li>
               <li class="link around link-product">
                 <a href="products-list.html">
                     <span>Sản phẩm</span> 
@@ -108,7 +108,7 @@
 
              
               <li class="link  "><a href="">Cửa hàng</a></li>
-              <li class="link  "><a href="">Giới thiệu</a></li>
+              <li class="link  "><a href="about.html">Giới thiệu</a></li>
                <li class="link around link-news link-product">
                 <a href="">
                     <span>Tin tức</span>
