--- a/products-list.html
+++ b/products-list.html
@@ -93,7 +93,7 @@
            <nav class= "col-12 col-sm-12 col-md-12 ">
             <ul class="menu ">
               <li class="link  "><a href="./index.html">Trang chủ</a></li>
-              <li class="link around link-product">
+              <li class="link border-bot around link-product">
                 <a href="">
                     <span>Sản phẩm</span> 
                     <span><i class="fa-sharp fa-solid fa-angle-down angle"></i>
@@ -106,7 +106,7 @@
                     </ul>
                 </li>
               <li class="link  "><a href="">Cửa hàng</a></li>
-              <li class="link  "><a href="">Giới thiệu</a></li>
+              <li class="link  "><a href="about.html">Giới thiệu</a></li>
                <li class="link around link-news link-product">
                 <a href="">
                     <span>Tin tức</span>
