--- a/thank-you.html
+++ b/thank-you.html
@@ -168,7 +168,7 @@
 
         <div class="col-2"></div>
 
-        <div class="col-8 flex ">
+        <div class="col-8  ">
             <p>Chúng tớ sẽ gửi mã vận đơn vào email của cậu, cậu nhớ kiểm tra hộp thư để theo dõi đơn hàng nhé!</p>
 
             <p>Cậu cũng có thể theo dõi đơn ở mục tài khoản.</p>
