--- a/address.html
+++ b/address.html
@@ -220,14 +220,14 @@
                         </div>
                     </div>
                     <div class="address-product-info pt-20 flex col-12 col-sm-6 col-md-6 j-center wrap">
-                        <div class="col-10">
+                        <div class="col-10 mb-20">
                             <div class="address-input col-12">
 
                                 <input class="full-name" type="text" placeholder="Họ Và Tên" id="#fullname">
                             </div>
                         </div>
 
-                        <div class="col-6">
+                        <div class="col-6 mb-20">
                             <div class="address-input col-12">
 
                                 <input class="full-name" type="text" placeholder="Email" id="#email">
@@ -237,7 +237,7 @@
 
                         <div class="col-1"></div>
 
-                        <div class="col-3">
+                        <div class="col-3 mb-20">
                             <div class="address-input col-12">
 
                                 <input class="full-name"  type="text" placeholder="Số điện thoại" id="#phonenumber">
@@ -245,7 +245,7 @@
 
                         </div>
 
-                        <div class="col-10">
+                        <div class="col-10 mb-20">
                             <div class="address-input col-12">
 
                                 <input class="full-name" type="text" placeholder="Địa chỉ cụ thể" id="#address">
