--- a/day2/index.html
+++ b/day2/index.html
@@ -25,7 +25,7 @@
     ></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
-    <script src="./UserCard.jsx" type="text/babel"></script>
-    <script src="./UserList.jsx" type="text/babel"></script>
+    <script src="userCard.jsx" type="text/babel"></script>
+    <script src="userList.jsx" type="text/babel"></script>
   </body>
 </html>
